--- a/BIT-PythonLearning.ipynb
+++ b/BIT-PythonLearning.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -781,7 +781,7 @@
      "output_type": "stream",
      "text": [
       "-----------执行开始----------\n",
-      "100%[**************************************************->]5.32s\n",
+      "100%[**************************************************->]5.18s\n",
       "-----------执行结束----------\n"
      ]
     }
@@ -1361,23 +1361,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "Terminator",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTerminator\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-10-f89c76a9318c>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     29\u001b[0m     \u001b[0mturtle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mhideturtle\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     30\u001b[0m     \u001b[0mturtle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdone\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 31\u001b[1;33m \u001b[0mmain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-10-f89c76a9318c>\u001b[0m in \u001b[0;36mmain\u001b[1;34m()\u001b[0m\n\u001b[0;32m     21\u001b[0m         \u001b[0mdrawDigit\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0meval\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mi\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m  \u001b[1;31m#通过eval()函数将数字变为整数\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mmain\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 23\u001b[1;33m     \u001b[0mturtle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpencolor\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"red\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     24\u001b[0m     \u001b[0mturtle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msetup\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m800\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m350\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m200\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m200\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     25\u001b[0m     \u001b[0mturtle\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpenup\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mD:\\Program\\Anaconda\\lib\\turtle.py\u001b[0m in \u001b[0;36mpencolor\u001b[1;34m(*args)\u001b[0m\n",
-      "\u001b[1;31mTerminator\u001b[0m: "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#SevenDigitsDrawV1.py\n",
     "import turtle\n",
@@ -1670,6 +1656,338 @@
    ],
    "source": [
     "hanoi(3,'A','B','C')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 集合类型\n",
+    "### 集合类型的定义\n",
+    "A = {\"python\", 123, (\"python\",123)} #使用{}建立集合\n",
+    "B = set(\"pypy123\") #使用set()建立集合\n",
+    "### 集合操作符\n",
+    "操作符及应用 |描述\n",
+    "---|---\n",
+    "S | T |返回一个新集合，包括在集合S和T中的所有元素\n",
+    "S - T |返回一个新集合，包括在集合S但不在T中的元素\n",
+    "S & T |返回一个新集合，包括同时在集合S和T中的元素\n",
+    "S ^ T |返回一个新集合，包括集合S和T中的非相同元素\n",
+    "S <= T 或 S < T |返回True/False，判断S和T的子集关系\n",
+    "S >= T 或 S > T |返回True/False，判断S和T的包含关系\n",
+    "S |= T |更新集合S，包括在集合S和T中的所有元素\n",
+    "S -= T |更新集合S，包括在集合S但不在T中的元素\n",
+    "S &= T |更新集合S，包括同时在集合S和T中的元素\n",
+    "S ^= T |更新集合S，包括集合S和T中的非相同元素\n",
+    "\n",
+    "### 集合处理方法\n",
+    "操作函数或方法|描述\n",
+    "---|---\n",
+    "S.add(x) |如果x不在集合S中，将x增加到S\n",
+    "S.discard(x)| 移除S中元素x，如果x不在集合S中，不报错\n",
+    "S.remove(x)| 移除S中元素x，如果x不在集合S中，产生KeyError异常\n",
+    "S.clear()| 移除S中所有元素\n",
+    "S.pop()| 随机返回S的一个元素，更新S，若S为空产生KeyError异常集合处理方法\n",
+    "S.copy() |返回集合S的一个副本\n",
+    "len(S) |返回集合S的元素个数\n",
+    "x in S |判断S中元素x， x在集合S中，返回True，否则返回False\n",
+    "x not in S| 判断S中元素x， x不在集合S中，返回False，否则返回True\n",
+    "set(x) |将其他类型变量x转变为集合类型\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 序列处理函数及方法\n",
+    "操作符及应用 |描述\n",
+    "---|---\n",
+    "x in s |如果x是序列s的元素，返回True，否则返回False\n",
+    "x not in s |如果x是序列s的元素，返回False，否则返回True\n",
+    "s + t |连接两个序列s和t\n",
+    "s*n 或 n*s| 将序列s复制n次\n",
+    "s[i] |索引，返回s中的第i个元素， i是序列的序号\n",
+    "s[i: j] 或 s[i: j: k] |切片，返回序列s中第i到j以k为步长的元素子序列\n",
+    "\n",
+    "函数和方法 |描述\n",
+    "---|---\n",
+    "len(s) |返回序列s的长度\n",
+    "min(s) |返回序列s的最小元素， s中元素需要可比较\n",
+    "max(s) |返回序列s的最大元素， s中元素需要可比较\n",
+    "s.index(x) 或s.index(x, i, j)| 返回序列s从i开始到j位置中第一次出现元素x的位置\n",
+    "s.count(x) |返回序列s中出现x的总次数\n",
+    "\n",
+    "### 元组\n",
+    "- 元组是一种序列类型，一旦创建就不能被修改\n",
+    "- 使用小括号 () 或 tuple() 创建，元素间用逗号 , 分隔\n",
+    "- 可以使用或不使用小括号\n",
+    "\n",
+    "元组继承序列类型的全部通用操作\n",
+    "- 元组继承了序列类型的全部通用操作\n",
+    "- 元组因为创建后不能修改，因此没有特殊操作\n",
+    "- 使用或不使用小括号\n",
+    "\n",
+    "### 列表\n",
+    "列表是序列类型的一种扩展，十分常用\n",
+    "- 列表是一种序列类型，创建后可以随意被修改\n",
+    "- 使用方括号 [] 或list() 创建，元素间用逗号 , 分隔\n",
+    "- 列表中各元素类型可以不同，无长度限制\n",
+    "\n",
+    "列表类型操作函数和方法\n",
+    "\n",
+    "函数或方法 |描述\n",
+    "---|---\n",
+    "ls[i] = x |替换列表ls第i元素为x\n",
+    "ls[i: j: k] = lt |用列表lt替换ls切片后所对应元素子列表\n",
+    "del ls[i] |删除列表ls中第i元素\n",
+    "del ls[i: j: k]| 删除|列表ls中第i到第j以k为步长的元素\n",
+    "ls += lt |更新列表ls，将列表lt元素增加到列表ls中\n",
+    "ls *= n |更新列表ls，其元素重复n次\n",
+    "ls.append(x) |在列表ls最后增加一个元素x\n",
+    "ls.clear() |删除列表ls中所有元素\n",
+    "ls.copy() |生成一个新列表，赋值ls中所有元素\n",
+    "ls.insert(i,x) |在列表ls的第i位置增加元素x\n",
+    "ls.pop(i) |将列表ls中第i位置元素取出并删除该元素\n",
+    "ls.remove(x) |将列表ls中出现的第一个元素x删除\n",
+    "ls.reverse() |将列表ls中的元素反转"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "creature = \"cat\", \"dog\", \"tiger\", \"human\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('cat', 'dog', 'tiger', 'human')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "creature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "请输入数字(回车退出): 12\n",
+      "请输入数字(回车退出): 12\n",
+      "请输入数字(回车退出): 1\n",
+      "请输入数字(回车退出): 12\n",
+      "请输入数字(回车退出): 2\n",
+      "请输入数字(回车退出): 45\n",
+      "请输入数字(回车退出): \n",
+      "平均值:14.0,方差:1.6e+01,中位数:6.5.\n"
+     ]
+    }
+   ],
+   "source": [
+    "#CalStatisticsV1.py\n",
+    "def getNum():       #获取用户不定长度的输入\n",
+    "    nums = []\n",
+    "    iNumStr = input(\"请输入数字(回车退出): \")\n",
+    "    while iNumStr != \"\":\n",
+    "        nums.append(eval(iNumStr))\n",
+    "        iNumStr = input(\"请输入数字(回车退出): \")\n",
+    "    return nums\n",
+    "\n",
+    "def mean(numbers):  #计算平均值\n",
+    "    s = 0.0\n",
+    "    for num in numbers:\n",
+    "        s = s + num\n",
+    "    return s / len(numbers)\n",
+    "\n",
+    "def dev(numbers, mean): #计算方差\n",
+    "    sdev = 0.0\n",
+    "    for num in numbers:\n",
+    "        sdev = sdev + (num - mean)**2\n",
+    "    return pow(sdev / (len(numbers)-1), 0.5)\n",
+    "\n",
+    "def median(numbers):    #计算中位数\n",
+    "    sorted(numbers)\n",
+    "    size = len(numbers)\n",
+    "    if size % 2 == 0:\n",
+    "        med = (numbers[size//2-1] + numbers[size//2])/2\n",
+    "    else:\n",
+    "        med = numbers[size//2]\n",
+    "    return med\n",
+    "\n",
+    "n =  getNum() #主体函数\n",
+    "m =  mean(n)\n",
+    "print(\"平均值:{},方差:{:.2},中位数:{}.\".format(m, dev(n,m),median(n)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Building prefix dict from the default dictionary ...\n",
+      "Dumping model to file cache C:\\Users\\SWYOUN~1\\AppData\\Local\\Temp\\jieba.cache\n",
+      "Loading model cost 1.040 seconds.\n",
+      "Prefix dict has been built succesfully.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "曹操         1451\n",
+      "孔明         1383\n",
+      "刘备         1252\n",
+      "关羽          784\n",
+      "张飞          358\n",
+      "商议          344\n",
+      "如何          338\n",
+      "主公          331\n",
+      "军士          317\n",
+      "吕布          300\n"
+     ]
+    }
+   ],
+   "source": [
+    "5#CalThreeKingdomsV2.py\n",
+    "import jieba\n",
+    "excludes = {\"将军\",\"却说\",\"荆州\",\"二人\",\"不可\",\"不能\",\"如此\"}\n",
+    "txt = open(\"threekingdoms.txt\", \"r\", encoding='utf-8').read()\n",
+    "words  = jieba.lcut(txt)\n",
+    "counts = {}\n",
+    "for word in words:\n",
+    "    if len(word) == 1:\n",
+    "        continue\n",
+    "    elif word == \"诸葛亮\" or word == \"孔明曰\":\n",
+    "        rword = \"孔明\"\n",
+    "    elif word == \"关公\" or word == \"云长\":\n",
+    "        rword = \"关羽\"\n",
+    "    elif word == \"玄德\" or word == \"玄德曰\":\n",
+    "        rword = \"刘备\"\n",
+    "    elif word == \"孟德\" or word == \"丞相\":\n",
+    "        rword = \"曹操\"\n",
+    "    else:\n",
+    "        rword = word\n",
+    "    counts[rword] = counts.get(rword,0) + 1\n",
+    "for word in excludes:\n",
+    "    del counts[word]\n",
+    "items = list(counts.items())\n",
+    "items.sort(key=lambda x:x[1], reverse=True) \n",
+    "for i in range(10):\n",
+    "    word, count = items[i]\n",
+    "    print (\"{0:<10}{1:>5}\".format(word, count))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 字典\n",
+    "函数或方法| 描述\n",
+    "---|---\n",
+    "del d[k]| 删除字典d中键k对应的数据值\n",
+    "k in d |判断键k是否在字典d中，如果在返回True，否则False\n",
+    "d.keys() |返回字典d中所有的键信息\n",
+    "d.values()| 返回字典d中所有的值信息\n",
+    "d.items() |返回字典d中所有的键值对信息\n",
+    "d.get(k, <default>) |键k存在，则返回相应值，不在则返回<default>值\n",
+    "d.pop(k, <default>) |键k存在，则取出相应值，不在则返回<default>值\n",
+    "d.popitem() |随机从字典d中取出一个键值对，以元组形式返回\n",
+    "d.clear()| 删除所有的键值对\n",
+    "len(d) |返回字典d中元素的个数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = {\"中国\":\"北京\", \"美国\":\"华盛顿\", \"法国\":\"巴黎\"} "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'北京'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.get(\"中国\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the        1138\n",
+      "and         965\n",
+      "to          754\n",
+      "of          669\n",
+      "you         550\n",
+      "i           542\n",
+      "a           542\n",
+      "my          514\n",
+      "hamlet      462\n",
+      "in          436\n"
+     ]
+    }
+   ],
+   "source": [
+    "#CalHamletV1.py\n",
+    "def getText():\n",
+    "    txt = open(\"hamlet.txt\", \"r\").read()\n",
+    "    txt = txt.lower()\n",
+    "    for ch in '!\"#$%&()*+,-./:;<=>?@[\\\\]^_‘{|}~':\n",
+    "        txt = txt.replace(ch, \" \")   #将文本中特殊字符替换为空格\n",
+    "    return txt\n",
+    "\n",
+    "hamletTxt = getText()\n",
+    "words  = hamletTxt.split()\n",
+    "counts = {}\n",
+    "for word in words:\t\t\t\n",
+    "    counts[word] = counts.get(word,0) + 1\n",
+    "items = list(counts.items())\n",
+    "items.sort(key=lambda x:x[1], reverse=True) \n",
+    "for i in range(10):\n",
+    "    word, count = items[i]\n",
+    "    print (\"{0:<10}{1:>5}\".format(word, count))"
    ]
   },
   {
