Update From Lenovo 2018-5-15

--- a/BIT-PythonLearning.ipynb
+++ b/BIT-PythonLearning.ipynb
@@ -279,8 +279,7 @@
     "### 数值运算函数\n",
     "函数及使用 |描述\n",
     "---|---\n",
-    "abs(x) |绝对值，x的绝对值\n",
-    "abs(-10.01)| 结果为 10.01\n",
+    "abs(x) |绝对值，x的绝对值，abs(-10.01)结果为 10.01\n",
     "divmod(x,y) |商余，(x//y, x%y)，同时输出商和余数,divmod(10, 3)结果为 (3, 1)\n",
     "pow(x, y[, z])|幂余，(x**y)%z，[..]表示参数z可省略pow(3, pow(3, 99), 10000) 结果为 4587\n",
     "round(x[, d]) |四舍五入，d是保留小数位数，默认值为0,round(-10.123, 2) 结果为 -10.12\n",
@@ -773,23 +772,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-----------执行开始----------\n",
-      "100%[**************************************************->]5.18s\n",
-      "-----------执行结束----------\n"
+      "--------------------------------------------------------------------------------------执行开始-------------------------------------------------------------------------------------\n",
+      "26 %[******************************************************************************************->....................................................................................................................................................................................................................................................................]9.29s"
      ]
     }
    ],
    "source": [
     "#TextProBarV3.py 完整效果\n",
     "import time\n",
-    "scale = 50\n",
+    "scale = 350\n",
     "print(\"执行开始\".center(scale//2, \"-\"))\n",
     "start = time.perf_counter()\n",
     "for i in range(scale+1):\n",
@@ -1839,7 +1837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1847,8 +1845,8 @@
      "output_type": "stream",
      "text": [
       "Building prefix dict from the default dictionary ...\n",
-      "Dumping model to file cache C:\\Users\\SWYOUN~1\\AppData\\Local\\Temp\\jieba.cache\n",
-      "Loading model cost 1.040 seconds.\n",
+      "Loading model from cache C:\\Users\\SWYOUN~1\\AppData\\Local\\Temp\\jieba.cache\n",
+      "Loading model cost 0.789 seconds.\n",
       "Prefix dict has been built succesfully.\n"
      ]
     },
@@ -1988,6 +1986,113 @@
     "for i in range(10):\n",
     "    word, count = items[i]\n",
     "    print (\"{0:<10}{1:>5}\".format(word, count))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 文件的使用\n",
+    "\n",
+    "- 文件的类型\n",
+    "- 文件的打开和关闭\n",
+    "- 文件内容的读取\n",
+    "- 数据的文件写入\n",
+    "文件是数据的抽象和集合\n",
+    "\n",
+    "- 文件是存储在辅助存储器上的数据序列\n",
+    "- 文件是数据存储的一种形式\n",
+    "- 文件展现形态：文本文件和二进制文件\n",
+    "文本文件 vs. 二进制文件\n",
+    "- 文件文件和二进制文件只是文件的展示方式\n",
+    "- 本质上，所有文件都是二进制形式存储\n",
+    "- 形式上， 所有文件采用两种方式展示\n",
+    "文件是数据的抽象和集合\n",
+    "- 由单一特定编码组成的文件，如UTF-8编码\n",
+    "- 由于存在编码，也被看成是存储着的长字符串\n",
+    "- 适用于例如： .txt文件、 .py文件等\n",
+    "文件是数据的抽象和集合\n",
+    "- 直接由比特0和1组成， 没有统一字符编码\n",
+    "- 一般存在二进制0和1的组织结构，即文件格式\n",
+    "- 适用于例如： .png文件、 .avi文件等\n",
+    "\n",
+    "文件的打开关闭\n",
+    "文件处理的步骤: 打开-操作-关闭\n",
+    "打开: <变量名> = open(<文件名>, <打开模式>) \n",
+    "\n",
+    "文件的打开模式| 描述\n",
+    "---|---\n",
+    "'r' |只读模式，默认值，如果文件不存在，返回FileNotFoundError\n",
+    "'w' |覆盖写模式，文件不存在则创建，存在则完全覆盖\n",
+    "'x' |创建写模式，文件不存在则创建，存在则返回FileExistsError\n",
+    "'a' |追加写模式，文件不存在则创建，存在则在文件最后追加内容\n",
+    "'b' |二进制文件模式\n",
+    "'t' |文本文件模式，默认值\n",
+    "'+' |与r/w/x/a一同使用，在原功能基础上增加同时读写功能\n",
+    "\n",
+    "\n",
+    "```\n",
+    "f = open(\"f.txt\")- 文本形式、只读模式、默认值\n",
+    "\n",
+    "f = open(\"f.txt\", \"rt\")- 文本形式、只读模式、同默认值\n",
+    "\n",
+    "f = open(\"f.txt\", \"w\")- 文本形式、覆盖写模式\n",
+    "\n",
+    "f = open(\"f.txt\", \"a+\")- 文本形式、追加写模式+ 读文件\n",
+    "\n",
+    "f = open(\"f.txt\", \"x\")- 文本形式、 创建写模式\n",
+    "\n",
+    "f = open(\"f.txt\", \"b\")- 二进制形式、只读模式\n",
+    "\n",
+    "f = open(\"f.txt\", \"wb\")- 二进制形式、覆盖写模式\n",
+    "```\n",
+    "\n",
+    "\n",
+    "关闭：<变量名>.close()\n",
+    "\n",
+    "文件的操作\n",
+    "\n",
+    "操作方法|描述\n",
+    "---|---\n",
+    "<f>.read(size=-1)|读入全部内容，如果给出参数，读入前size长度\n",
+    "<f>.readline(size=-1)|读入一行内容，如果给出参数，读入该行前size长度\n",
+    "<f>.readlines(hint=-1)|读入文件所有行，以每行为元素形成列表如果给出参数，读入前hint行\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 样例十一 自动轨迹绘制"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#AutoTraceDraw.py\n",
+    "import turtle as t\n",
+    "t.title('自动轨迹绘制')\n",
+    "t.setup(800, 600, 0, 0)\n",
+    "t.pencolor(\"red\")\n",
+    "t.pensize(5)\n",
+    "#数据读取\n",
+    "datals = []\n",
+    "f = open(\"data.txt\")\n",
+    "for line in f:\n",
+    "    line = line.replace(\"\\n\",\"\")\n",
+    "    datals.append(list(map(eval, line.split(\",\"))))\n",
+    "f.close()\n",
+    "#自动绘制\n",
+    "for i in range(len(datals)):\n",
+    "    t.pencolor(datals[i][3],datals[i][4],datals[i][5])\n",
+    "    t.fd(datals[i][0])\n",
+    "    if datals[i][1]:\n",
+    "        t.rt(datals[i][2])\n",
+    "    else:\n",
+    "        t.lt(datals[i][2])\n"
    ]
   },
   {
