--- a/BIT-PythonLearning.ipynb
+++ b/BIT-PythonLearning.ipynb
@@ -2443,16 +2443,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<wordcloud.wordcloud.WordCloud at 0x1ed96e659b0>"
+       "<wordcloud.wordcloud.WordCloud at 0x21707fe6208>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2608,7 +2608,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
