--- a/BIT-PythonLearning.ipynb
+++ b/BIT-PythonLearning.ipynb
@@ -2573,8 +2573,108 @@
     "    font_path = \"msyh.ttc\"    \n",
     "    )\n",
     "w.generate(txt)\n",
-    "w.to_file(\"grwordcloud.png\")\n",
-    "\n"
+    "w.to_file(\"grwordcloud.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#玫瑰花的绘制\n",
+    "#RoseDraw.py\n",
+    "import turtle as t\n",
+    "# 定义一个曲线绘制函数\n",
+    "def DegreeCurve(n, r, d=1):\n",
+    "    for i in range(n):\n",
+    "        t.left(d)\n",
+    "        t.circle(r, abs(d))\n",
+    "# 初始位置设定\n",
+    "s = 0.2 # size\n",
+    "t.setup(450*5*s, 750*5*s)\n",
+    "t.pencolor(\"black\")\n",
+    "t.fillcolor(\"red\")\n",
+    "t.speed(100)\n",
+    "t.penup()\n",
+    "t.goto(0, 900*s)\n",
+    "t.pendown()\n",
+    "# 绘制花朵形状\n",
+    "t.begin_fill()\n",
+    "t.circle(200*s,30)\n",
+    "DegreeCurve(60, 50*s)\n",
+    "t.circle(200*s,30)\n",
+    "DegreeCurve(4, 100*s)\n",
+    "t.circle(200*s,50)\n",
+    "DegreeCurve(50, 50*s)\n",
+    "t.circle(350*s,65)\n",
+    "DegreeCurve(40, 70*s)\n",
+    "t.circle(150*s,50)\n",
+    "DegreeCurve(20, 50*s, -1)\n",
+    "t.circle(400*s,60)\n",
+    "DegreeCurve(18, 50*s)\n",
+    "t.fd(250*s)\n",
+    "t.right(150)\n",
+    "t.circle(-500*s,12)\n",
+    "t.left(140)\n",
+    "t.circle(550*s,110)\n",
+    "t.left(27)\n",
+    "t.circle(650*s,100)\n",
+    "t.left(130)\n",
+    "t.circle(-300*s,20)\n",
+    "t.right(123)\n",
+    "t.circle(220*s,57)\n",
+    "t.end_fill()\n",
+    "# 绘制花枝形状\n",
+    "t.left(120)\n",
+    "t.fd(280*s)\n",
+    "t.left(115)\n",
+    "t.circle(300*s,33)\n",
+    "t.left(180)\n",
+    "t.circle(-300*s,33)\n",
+    "DegreeCurve(70, 225*s, -1)\n",
+    "t.circle(350*s,104)\n",
+    "t.left(90)\n",
+    "t.circle(200*s,105)\n",
+    "t.circle(-500*s,63)\n",
+    "t.penup()\n",
+    "t.goto(170*s,-30*s)\n",
+    "t.pendown()\n",
+    "t.left(160)\n",
+    "DegreeCurve(20, 2500*s)\n",
+    "DegreeCurve(220, 250*s, -1)\n",
+    "# 绘制一个绿色叶子\n",
+    "t.fillcolor('green')\n",
+    "t.penup()\n",
+    "t.goto(670*s,-180*s)\n",
+    "t.pendown()\n",
+    "t.right(140)\n",
+    "t.begin_fill()\n",
+    "t.circle(300*s,120)\n",
+    "t.left(60)\n",
+    "t.circle(300*s,120)\n",
+    "t.end_fill()\n",
+    "t.penup()\n",
+    "t.goto(180*s,-550*s)\n",
+    "t.pendown()\n",
+    "t.right(85)\n",
+    "t.circle(600*s,40)\n",
+    "# 绘制另一个绿色叶子\n",
+    "t.penup()\n",
+    "t.goto(-150*s,-1000*s)\n",
+    "t.pendown()\n",
+    "t.begin_fill()\n",
+    "t.rt(120)\n",
+    "t.circle(300*s,115)\n",
+    "t.left(75)\n",
+    "t.circle(300*s,100)\n",
+    "t.end_fill()\n",
+    "t.penup()\n",
+    "t.goto(430*s,-1070*s)\n",
+    "t.pendown()\n",
+    "t.right(30)\n",
+    "t.circle(-600*s,35)\n",
+    "t.done()"
    ]
   },
   {
@@ -2582,14 +2682,37 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#HollandRadarDraw\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib\n",
+    "matplotlib.rcParams['font.family']='SimHei'\n",
+    "radar_labels = np.array(['研究型(I)','艺术型(A)','社会型(S)',\\\n",
+    "                         '企业型(E)','常规型(C)','现实型(R)']) #雷达标签\n",
+    "nAttr = 6\n",
+    "data = np.array([[0.40, 0.32, 0.35, 0.30, 0.30, 0.88],\n",
+    "                 [0.85, 0.35, 0.30, 0.40, 0.40, 0.30],\n",
+    "                 [0.43, 0.89, 0.30, 0.28, 0.22, 0.30],\n",
+    "                 [0.30, 0.25, 0.48, 0.85, 0.45, 0.40],\n",
+    "                 [0.20, 0.38, 0.87, 0.45, 0.32, 0.28],\n",
+    "                 [0.34, 0.31, 0.38, 0.40, 0.92, 0.28]]) #数据值\n",
+    "data_labels = ('艺术家', '实验员', '工程师', '推销员', '社会工作者','记事员')\n",
+    "angles = np.linspace(0, 2*np.pi, nAttr, endpoint=False)\n",
+    "data = np.concatenate((data, [data[0]]))\n",
+    "angles = np.concatenate((angles, [angles[0]]))\n",
+    "fig = plt.figure(facecolor=\"white\")\n",
+    "plt.subplot(111, polar=True)\n",
+    "plt.plot(angles,data,'o-', linewidth=1, alpha=0.2)\n",
+    "plt.fill(angles,data, alpha=0.25)\n",
+    "plt.thetagrids(angles*180/np.pi, radar_labels,frac = 1.2)\n",
+    "plt.figtext(0.52, 0.95, '霍兰德人格分析', ha='center', size=20)\n",
+    "legend = plt.legend(data_labels, loc=(0.94, 0.80), labelspacing=0.1)\n",
+    "plt.setp(legend.get_texts(), fontsize='large')\n",
+    "plt.grid(True)\n",
+    "plt.savefig('holland_radar.jpg')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
